src/styles/index.css
:root {
  box-sizing: border-box;
  --trans: 0.15s ease-in;
  --font-color-dark: white;
  --button-hover: rgb(238, 238, 238);
}

body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
  overflow: hidden;
  color: var(--font-color-dark);
  background-color: #0c1319;
}

.content {
  min-width: 320px;
  height: 100vh;
}

/* Project Modal */
.modal-container {
  display: none;
  position: absolute;
  z-index: 1;
  height: 100vh;
  width: 100vw;
}

.project-modal {
  position: absolute;
  z-index: 2;
  background-color: white;
  border: 1px solid gray;
  border-radius: 5px;
  box-shadow: 0px 2px 3px 0px #80808063;
  color: gray;
  width: 200px;
  overflow: scroll;
  height: 100px;
}

.modal-list {
  margin: 0;
}

.modal-li {
  padding: 0 8px;
  height: 32px;
  line-height: 32px;
  cursor: pointer;
  font-size: 14px;
  width: 200px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.modal-li:hover {
  background-color: var(--button-hover);
}

/* Delete modal */
.delete-modal {
  position: absolute;
  z-index: 2;
  width: 300px;
  top: 25%;
  background-color: #0c1319;
  border: 1px solid lightskyblue;
  border-radius: 5px;
  color: gray;
  box-shadow: 0px 0px 5px 0px lightcoral;
}

.modal-stretch {
  left: calc(50% - 30px);
}

.modal-unstretch {
  left: calc(50% - 150px);
}

.question {
  font-weight: bold;
  padding: 7px 10px;
  color: lightcoral;
}

.info {
  padding: 0px 10px 15px;
  font-size: 15px;
  text-align: center;
  color: white;
}

.delete-buttons {
  display: flex;
  justify-content: center;
  gap: 8px;
  padding: 0 0 8px 0;
}

.delete-btn {
  padding: 5px 8px;
  border-radius: 5px;
  font-size: 14px;
  cursor: pointer;
  user-select: none;
  width: 65px;
  border: none;
}

.delete-cancel {
  background-color: white;
}

.delete-cancel:hover {
  background-color: rgb(225, 225, 225);
}

.delete-confirm {
  background-color: rgb(64, 64, 64);
  color: white;
}

.delete-confirm:hover {
  background-color: rgb(44, 44, 44);
}

/* Document */
.content {
  height: 100vh;
  display: flex;
  flex-direction: column;
}

/* Header */
.header {
  display: flex;
  justify-content: space-between;
  background-color: #3f3f3f;
  padding: 10px 20px;
}

.header-left {
  display: flex;
  gap: 10px;
}

.header-right {
  display: flex;
  gap: 10px;
}

.hamburger {
  background: none;
  background-image: url(../icons/dark-mode/menu.svg);
  background-position: center;
  cursor: pointer;
  height: 24px;
  width: 24px;
  border: none;
}

.home {
  background: none;
  background-image: url(../icons/dark-mode/home.svg);
  background-position: center;
  cursor: pointer;
  height: 24px;
  width: 24px;
  border: none;
}

.add {
  background: none;
  background-image: url(../icons/dark-mode/add.svg);
  background-position: center;
  cursor: pointer;
  height: 24px;
  width: 24px;
  border: none;
}

.profile {
  display: none;
}

.main {
  display: flex;
  flex: 1;
}

/* Sidebar */
.sidebar {
  z-index: 2;
  display: flex;
  flex-direction: column;
  width: 200px;
  height: 100%;
  background-color: #27648d;
  padding: 0px 15px;
  transition: var(--trans);
  position: fixed;
}

.invisible {
  transform: translateX(-230px);
}

ul {
  list-style: none;
  padding: 0;
}

.sidebar-item {
  padding: 7px 5px;
  cursor: pointer;
  border-radius: 5px;
  user-select: none;
}

.sidebar-item:hover {
  background-color: #1e557a;
}

.projects-list {
  overflow: scroll;
  overflow-y: auto;
  overflow-x: auto;
  height: 60vh;
  margin: 0;
}

.projects {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 5px;
}

.projects:hover {
  background-color: #1e557a;
}

.project-buttons {
  display: none;
  padding: 0px 5px;
}

.add-project-button-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 24px;
  width: 24px;
  cursor: pointer;
}

.add-project {
  background: none;
  background-image: url(../icons/dark-mode/add.svg);
  background-position: center;
  cursor: pointer;
  height: 16px;
  width: 16px;
  border: none;
}

.projects-toggle-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 24px;
  width: 24px;
  cursor: pointer;
}

.projects-toggle {
  background: none;
  background-image: url(../icons/dark-mode/arrow.svg);
  background-position: center;
  cursor: pointer;
  height: 16px;
  width: 16px;
  border: none;
  transition: 0.2s;
}

.toggle {
  transform: rotate(90deg);
}

.sidebar:hover .project-buttons {
  display: flex;
  gap: 5px;
}

.project-form {
  display: flex;
}

input[type='text'] {
  border: 1px solid white;
  padding: 7px 5px;
}

.project-input {
  flex: 1;
  border-radius: 5px 0 0 5px;
}

.close-button {
  border: none;
  border-radius: 0 5px 5px 0;
  font-size: 18px;
  background-color: white;
  color: rgb(192, 192, 192);
  cursor: pointer;
}

.close-button:hover {
  color: rgb(121, 121, 121);
}

.project-wrapper {
  display: flex;
  gap: 10px;
}

.project-span {
  text-overflow: ellipsis;
  width: 164px;
  white-space: nowrap;
  overflow: hidden;
}

/* Tasks */
.tasks {
  flex: 1;
  background-color: #0c1319;
  padding: 30px 0px;
  transition: var(--trans);
  display: flex;
  flex-direction: column;
}

.stretch {
  margin-left: 230px;
}

.agenda-container {
  width: clamp(400px, 90%, 800px);
  align-self: center;
}

.agenda-header {
  margin-bottom: 45px;
}

h1 {
  margin-top: 0;
  font-size: 24px;
  user-select: none;
  display: flex;
  align-items: baseline;
  gap: 8px;
}

.agenda-heading {
  color: #68b4e7;
}

.header-date {
  font-weight: normal;
  font-size: 16px;
}

.delete-project {
  margin-left: auto;
  background: none;
  border: none;
  cursor: pointer;
  color: var(--font-color-dark);
}

.delete-project:hover {
  text-decoration: underline;
}

.agenda-list {
  overflow: scroll;
  overflow-y: auto;
  overflow-x: auto;
  height: 75vh;
}
/* ... */

